seaqt/QtWebEngineCore/gen_qwebenginedesktopmediarequest.h

class QAbstractListModel;
class QMetaObject;
class QModelIndex;
class QWebEngineDesktopMediaRequest;
typedef struct QAbstractListModel QAbstractListModel;
typedef struct QMetaObject QMetaObject;
typedef struct QModelIndex QModelIndex;
typedef struct QWebEngineDesktopMediaRequest QWebEngineDesktopMediaRequest;
QWebEngineDesktopMediaRequest* QWebEngineDesktopMediaRequest_new();
QWebEngineDesktopMediaRequest* QWebEngineDesktopMediaRequest_new_from(QWebEngineDesktopMediaRequest* from);
void QWebEngineDesktopMediaRequest_operatorAssign(QWebEngineDesktopMediaRequest* self, QWebEngineDesktopMediaRequest* from);
void QWebEngineDesktopMediaRequest_swap(QWebEngineDesktopMediaRequest* self, QWebEngineDesktopMediaRequest* other);
QAbstractListModel* QWebEngineDesktopMediaRequest_screensModel(const QWebEngineDesktopMediaRequest* self);
QAbstractListModel* QWebEngineDesktopMediaRequest_windowsModel(const QWebEngineDesktopMediaRequest* self);
void QWebEngineDesktopMediaRequest_selectScreen(const QWebEngineDesktopMediaRequest* self, QModelIndex* index);
void QWebEngineDesktopMediaRequest_selectWindow(const QWebEngineDesktopMediaRequest* self, QModelIndex* index);
void QWebEngineDesktopMediaRequest_cancel(const QWebEngineDesktopMediaRequest* self);
const QMetaObject* QWebEngineDesktopMediaRequest_staticMetaObject();